Greatly improved Collection View efficiency. Much better performance when clicking many buttons rapidly

--- a/Rick and Morty Soundboard/Rick and Morty Soundboard/trackData.plist
+++ b/Rick and Morty Soundboard/Rick and Morty Soundboard/trackData.plist
@@ -1,77 +1,70 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<!--
- trackImages.plist
- Rick and Morty Soundboard
- 
- Created by Daniel Meechan on 13/08/2017.
- Copyright (c) 2017 Rogue Studios. All rights reserved.
- -->
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <array>
-        <dict>
-            <key>name</key>
-            <string>Lick my balls</string>
-            <key>image</key>
-            <string>beth</string>
-            <key>sound</key>
-            <string>lick my balls</string>
-        </dict>
-        <dict>
-            <key>name</key>
-            <string>Wubba lubba dub dub</string>
-            <key>image</key>
-            <string>dr_wong</string>
-            <key>sound</key>
-            <string>wubba lubba dub dub</string>
-        </dict>
-        <dict>
-            <key>name</key>
-            <string>Mr Meeseeks</string>
-            <key>image</key>
-            <string>mr_poopy_butthole</string>
-            <key>sound</key>
-            <string>mr meeseeks</string>
-        </dict>
-        <dict>
-            <key>name</key>
-            <string>Tiny Rick</string>
-            <key>image</key>
-            <string>morty</string>
-            <key>sound</key>
-            <string>tiny rick</string>
-        </dict>
-        <dict>
-            <key>name</key>
-            <string>Lick my balls</string>
-            <key>image</key>
-            <string>jaguar</string>
-            <key>sound</key>
-            <string>lick my balls</string>
-        </dict>
-        <dict>
-            <key>name</key>
-            <string>Wubba lubba dub dub</string>
-            <key>image</key>
-            <string>birdperson</string>
-            <key>sound</key>
-            <string>wubba lubba dub dub</string>
-        </dict>
-        <dict>
-            <key>name</key>
-            <string>Mr meeseeks</string>
-            <key>image</key>
-            <string>rick</string>
-            <key>sound</key>
-            <string>mr meeseeks</string>
-        </dict>
-        <dict>
-            <key>name</key>
-            <string>Tiny Rick</string>
-            <key>image</key>
-            <string>jerry</string>
-            <key>sound</key>
-            <string>tiny rick</string>
-        </dict>
-    </array>
+<array>
+	<dict>
+		<key>name</key>
+		<string>Lick my balls</string>
+		<key>image</key>
+		<string>rick</string>
+		<key>sound</key>
+		<string>lick my balls</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>Wubba lubba dub dub</string>
+		<key>image</key>
+		<string>rick</string>
+		<key>sound</key>
+		<string>wubba lubba dub dub</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>Mr Meeseeks</string>
+		<key>image</key>
+		<string>jerry</string>
+		<key>sound</key>
+		<string>mr meeseeks</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>Tiny Rick</string>
+		<key>image</key>
+		<string>tiny_rick</string>
+		<key>sound</key>
+		<string>tiny rick</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>Lick my balls2</string>
+		<key>image</key>
+		<string>rick</string>
+		<key>sound</key>
+		<string>lick my balls</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>Wubba lubba dub dub2</string>
+		<key>image</key>
+		<string>rick</string>
+		<key>sound</key>
+		<string>wubba lubba dub dub</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>Mr meeseeks2</string>
+		<key>image</key>
+		<string>mr meeseeks</string>
+		<key>sound</key>
+		<string>mr meeseeks</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>Tiny Rick2</string>
+		<key>image</key>
+		<string>tiny rick</string>
+		<key>sound</key>
+		<string>tiny rick</string>
+	</dict>
+</array>
 </plist>
