--- a/Rick and Morty Soundboard/Rick and Morty Soundboard/Info.plist
+++ b/Rick and Morty Soundboard/Rick and Morty Soundboard/Info.plist
@@ -17,9 +17,11 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>2</string>
+	<string>3</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We need access to the photo library so you can save wallpapers to your device (coming soon). Wubba lubba dub dub!</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
